--- a/src/components/ButtonControl/ButtonControl.style.scss
+++ b/src/components/ButtonControl/ButtonControl.style.scss
@@ -13,7 +13,7 @@
   height: 2rem;
   justify-content: center;
   margin: 0;
-  outline: none;
+  outline: none !important;
   padding: 0;
   transition: background-color 0.2s, color 0.2s, border-color 0.2s;
   width: 2rem;
@@ -32,7 +32,7 @@
     color: var(--button-secondary-text-pressed);
   }
 
-  &[data-circular="true"] {
+  &[data-circular='true'] {
     border-radius: 100vh;
     margin-left: 0.125rem;
   }
