--- a/src/components/ButtonDialpad/ButtonDialpad.style.scss
+++ b/src/components/ButtonDialpad/ButtonDialpad.style.scss
@@ -2,7 +2,7 @@
   border: var(--md-globals-border-clear);
   cursor: pointer;
   font-family: var(--md-globals-font-default);
-  outline: none;
+  outline: none !important;
   transition: background-color 0.2s, color 0.2s, border-color 0.2s;
   background-color: var(--button-dialpad-background);
 
